PostService: Refactorizar mapeo de DTO y validación de datos